# paradigm-app

./: .gitmodules  Cargo.toml  README.md  package-lock.json  package.json
central-infrastructure/: cdk.context.json  package.json  pnpm-lock.yaml  sst.config.ts
central-infrastructure/stacks/: ApiStack.ts  AuthStack.ts  DatabaseStack.ts  SNSStack.ts  SQSStack.ts  StorageStack.ts  WebSocketApiStack.ts
client-websocket/: Cargo.toml
client-websocket/client-rs/: README.md
client-websocket/client-rs/src/: main.rs
client-websocket/client-ts/: README.md  index.ts  package.json  pnpm-lock.yaml
client-websocket/src/: main.rs
dnas/todos/workdir/: dna.yaml
dnas/todos/zomes/coordinator/todos/: Cargo.toml
dnas/todos/zomes/coordinator/todos/src/: lib.rs  my_todos.rs  todo_item.rs
dnas/todos/zomes/integrity/todos/: Cargo.toml
dnas/todos/zomes/integrity/todos/src/: lib.rs  todo_item.rs
paradigm-phase-one/: package.json  pnpm-lock.yaml  sst.config.ts
paradigm-phase-one/stacks/: ApiStack.ts  AuthStack.ts  DatabaseStack.ts  StorageStack.ts
tests/src/todos/todos/: common.ts  my-todos.test.ts  todo-item.test.ts
ui/src/: App.vue
ui/src/todos/todos/: CreateTodoItem.vue  EditTodoItem.vue  MyTodos.vue  TodoItemDetail.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
